--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 </script>
 <footer id="footer">
-  Copyright @Ayush_Addhyan |JadavpurUniversity_IT_2k23|
+  Copyright @Ayush_Addhyayan |JadavpurUniversity_IT_2k23|
 </footer>
 </body>
 </html>
